--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <nav>
     <ul>
-      <li><a></a></li>
-      <li><a></a></li>
-      <li><a></a></li>
-      <li><a></a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Contacts</a></li>
     </ul>
   </nav>
 </body>
