add my image to my webpage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <li><a href="#">Contacts</a></li>
     </ul>
   </nav>
-  
+  <img src="images/miih.JPG" alt="an image of me">
 </body>
 </html>
