introduce heading and paragraph

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     </ul>
   </nav>
   <img src="images/miih.JPG" alt="an image of me">
+  <h1>HELLO</h1>
+  <p>I am Louis Odhiambo, I am a software developer</p>
 </body>
 </html>
