--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Louis Odhiambo</title>
 </head>
 <body>
+  <h1>Portfolio</h1>
+  <img src="images/miih.JPG" alt="an image of me">
   <nav>
     <ul>
       <li><a href="#">Home</a></li>
@@ -15,8 +17,12 @@
       <li><a href="#">Contacts</a></li>
     </ul>
   </nav>
-  <img src="images/miih.JPG" alt="an image of me">
   <h1>HELLO</h1>
   <p>I am Louis Odhiambo, I am a software developer</p>
+  <h1>About me</h1>
+  <h3>Background</h3>
+  <ul>
+    
+  </ul>
 </body>
 </html>
