add heading and paragraph to about section

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
   <p>I am Louis Odhiambo, I am a software developer</p>
   <h1>About me</h1>
   <h3>Background</h3>
+  <h4>Academic</h4>
   <ul>
-    
+    <li>Certificate in software development</li>
+    <li>Degree in Information science</li>
+    <li>Best training certificate</li>
   </ul>
+  <h4>What am doing</h4>
+  <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life because it help</p>
+  <h4>What I hope to do</h4>
 </body>
 </html>
