introduce a paragraph explaining future plans and current plans

--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
     <li>Degree in Information science</li>
     <li>Best training certificate</li>
   </ul>
-  <h4>What am doing</h4>
-  <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life because it help</p>
+  <h4>What am doing currently</h4>
+  <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life because it helps me improve my
+    coding skils. I took progamming because I love games and the interraction between games, computers and people, and I would love to create a 
+    game with the skills I gain from programming. My passion in proramming developed from gaming.
+  </p>
   <h4>What I hope to do</h4>
+  <p>
+    I hope to graduate and become a programmer in the field, I also have a future plan of starting a company of my own based on an aplication I want to
+    create. I also hope to become an android developer at the end of my course. I am also planning to improve gamers experience by creating more 
+    interactive games.
+  </p>
 </body>
 </html>
