add hobbies, interests and skills section

--- a/index.html
+++ b/index.html
@@ -38,5 +38,13 @@
     create. I also hope to become an android developer at the end of my course. I am also planning to improve gamers experience by creating more 
     interactive games.
   </p>
+  <h4>Interests</h4>
+  <p>My hobbies and interests include;</p>
+  <ul>
+    <li>Computer games</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Swimming</li>
+  </ul>
 </body>
 </html>
