add images of projects I have done

--- a/index.html
+++ b/index.html
@@ -39,12 +39,20 @@
     interactive games.
   </p>
   <h4>Interests</h4>
-  <p>My hobbies and interests include;</p>
+  <p>My hobbies, skills and interests include;</p>
   <ul>
     <li>Computer games</li>
+    <li>Java script</li>
     <li>HTML</li>
     <li>CSS</li>
     <li>Swimming</li>
   </ul>
+  <h3>Projects</h3>
+  <p>
+    Below are the projects I have done;
+  </p>
+  <img src="images/project1.png" alt="My first project">
+  <img src="images/project2.png" alt="Delani studio project">
+  <img src="images/project3.png" alt="phoographer Portfolio project">
 </body>
 </html>
