add contacts to the footer section

--- a/index.html
+++ b/index.html
@@ -54,5 +54,14 @@
   <img src="images/project1.png" alt="My first project">
   <img src="images/project2.png" alt="Delani studio project">
   <img src="images/project3.png" alt="phoographer Portfolio project">
+  <footer>
+  <h4>Contacts</h4>
+  <ul>
+    <li>odhiambolouis745@gmail.com</li>
+    <li>+254 741 534 863</li>
+    <li>linkedin: @LouisOdhiambo</li>
+    <li>Instagram: @african_boy</li>
+  </ul>
+</footer>
 </body>
 </html>
