add a brief description of the projects i have done

--- a/index.html
+++ b/index.html
@@ -52,8 +52,18 @@
     Below are the projects I have done;
   </p>
   <img src="images/project1.png" alt="My first project">
+  <imgcaption>
+    This is the first project I did and the project used two technologies ie; HTML and CSS, The projects is about a website for African Film 
+    and Drama Festivals <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
+  </imgcaption>
   <img src="images/project2.png" alt="Delani studio project">
+  <imgcaption>
+    This is forked version of someones project the project uses HTML, CSS and JavaScript <a href="https://louis-crypto.github.io/delani_studio_site.github.io/">view project</a>
+  </imgcaption>
   <img src="images/project3.png" alt="phoographer Portfolio project">
+  <imgcaption>
+    This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <a href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
+  </imgcaption>
   <footer>
   <h4>Contacts</h4>
   <ul>
