link index.css to index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Louis Odhiambo</title>
+  <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
   <h1>Portfolio</h1>
   <img src="images/miih.JPG" alt="an image of me">
@@ -28,14 +31,18 @@
     <li>Best training certificate</li>
   </ul>
   <h4>What am doing currently</h4>
-  <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life because it helps me improve my
-    coding skils. I took progamming because I love games and the interraction between games, computers and people, and I would love to create a 
+  <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life
+    because it helps me improve my
+    coding skils. I took progamming because I love games and the interraction between games, computers and people, and I
+    would love to create a
     game with the skills I gain from programming. My passion in proramming developed from gaming.
   </p>
   <h4>What I hope to do</h4>
   <p>
-    I hope to graduate and become a programmer in the field, I also have a future plan of starting a company of my own based on an aplication I want to
-    create. I also hope to become an android developer at the end of my course. I am also planning to improve gamers experience by creating more 
+    I hope to graduate and become a programmer in the field, I also have a future plan of starting a company of my own
+    based on an aplication I want to
+    create. I also hope to become an android developer at the end of my course. I am also planning to improve gamers
+    experience by creating more
     interactive games.
   </p>
   <h4>Interests</h4>
@@ -51,27 +58,31 @@
   <p>
     Below are the projects I have done;
   </p>
-  <img src="images/project1.png" alt="My first project">
+  <img class="project1" src="images/project1.png" alt="My first project">
   <imgcaption>
-    This is the first project I did and the project used two technologies ie; HTML and CSS, The projects is about a website for African Film 
+    This is the first project I did and the project used two technologies ie; HTML and CSS, The projects is about a
+    website for African Film
     and Drama Festivals <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
   </imgcaption>
-  <img src="images/project2.png" alt="Delani studio project">
+  <img class="Delani" src="images/project2.png" alt="Delani studio project">
   <imgcaption>
-    This is forked version of someones project the project uses HTML, CSS and JavaScript <a href="https://louis-crypto.github.io/delani_studio_site.github.io/">view project</a>
+    This is forked version of someones project the project uses HTML, CSS and JavaScript <a
+      href="https://louis-crypto.github.io/delani_studio_site.github.io/">view project</a>
   </imgcaption>
-  <img src="images/project3.png" alt="phoographer Portfolio project">
+  <img class="photographer" src="images/project3.png" alt="phoographer Portfolio project">
   <imgcaption>
-    This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <a href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
+    This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <a
+      href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
   </imgcaption>
   <footer>
-  <h4>Contacts</h4>
-  <ul>
-    <li>odhiambolouis745@gmail.com</li>
-    <li>+254 741 534 863</li>
-    <li>linkedin: @LouisOdhiambo</li>
-    <li>Instagram: @african_boy</li>
-  </ul>
-</footer>
+    <h4>Contacts</h4>
+    <ul>
+      <li>odhiambolouis745@gmail.com</li>
+      <li>+254 741 534 863</li>
+      <li>linkedin: @LouisOdhiambo</li>
+      <li>Instagram: @african_boy</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
