change width of images in projects section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     website for African Film
     and Drama Festivals <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
   </imgcaption>
-  <img class="Delani" src="images/project2.png" alt="Delani studio project">
+  <img class="delani" src="images/project2.png" alt="Delani studio project">
   <imgcaption>
     This is forked version of someones project the project uses HTML, CSS and JavaScript <a
       href="https://louis-crypto.github.io/delani_studio_site.github.io/">view project</a>
