--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <h1>Portfolio</h1>
+  <div id="home">
   <img src="images/miih.JPG" alt="an image of me">
   <nav>
     <ul>
@@ -22,6 +23,8 @@
   </nav>
   <h1>HELLO</h1>
   <p>I am Louis Odhiambo, I am a software developer</p>
+  </div>
+  <div id="about">
   <h1>About me</h1>
   <h3>Background</h3>
   <h4>Academic</h4>
@@ -54,6 +57,8 @@
     <li>CSS</li>
     <li>Swimming</li>
   </ul>
+  </div>
+  <div id="projects">  
   <h3>Projects</h3>
   <p>
     Below are the projects I have done;
@@ -74,6 +79,7 @@
     This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <a
       href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
   </imgcaption>
+  </div>
   <footer>
     <h4>Contacts</h4>
     <ul>
