add span elements in h2 tags

--- a/index.html
+++ b/index.html
@@ -12,73 +12,78 @@
 <body>
   <h1>Portfolio</h1>
   <div id="home">
-  <img src="images/miih.JPG" alt="an image of me">
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contacts</a></li>
-    </ul>
-  </nav>
-  <h1>HELLO</h1>
-  <p>I am Louis Odhiambo, I am a software developer</p>
+    <h2>
+      <span class="l">l</span><span class="o">o</span><span class="u">u</span><span class="i">i</span><span class="s">s</span>
+    </h2>
+    <p>Louis Odhiambo</p>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contacts</a></li>
+      </ul>
+    </nav>
+    <img src="images/miih.JPG" alt="an image of me">
+    <h1>HELLO</h1>
+    <p>I am Louis Odhiambo, I am a software developer</p>
   </div>
   <div id="about">
-  <h1>About me</h1>
-  <h3>Background</h3>
-  <h4>Academic</h4>
-  <ul>
-    <li>Certificate in software development</li>
-    <li>Degree in Information science</li>
-    <li>Best training certificate</li>
-  </ul>
-  <h4>What am doing currently</h4>
-  <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life
-    because it helps me improve my
-    coding skils. I took progamming because I love games and the interraction between games, computers and people, and I
-    would love to create a
-    game with the skills I gain from programming. My passion in proramming developed from gaming.
-  </p>
-  <h4>What I hope to do</h4>
-  <p>
-    I hope to graduate and become a programmer in the field, I also have a future plan of starting a company of my own
-    based on an aplication I want to
-    create. I also hope to become an android developer at the end of my course. I am also planning to improve gamers
-    experience by creating more
-    interactive games.
-  </p>
-  <h4>Interests</h4>
-  <p>My hobbies, skills and interests include;</p>
-  <ul>
-    <li>Computer games</li>
-    <li>Java script</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Swimming</li>
-  </ul>
+    <h1>About me</h1>
+    <h3>Background</h3>
+    <h4>Academic</h4>
+    <ul>
+      <li>Certificate in software development</li>
+      <li>Degree in Information science</li>
+      <li>Best training certificate</li>
+    </ul>
+    <h4>What am doing currently</h4>
+    <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life
+      because it helps me improve my
+      coding skils. I took progamming because I love games and the interraction between games, computers and people, and
+      I
+      would love to create a
+      game with the skills I gain from programming. My passion in proramming developed from gaming.
+    </p>
+    <h4>What I hope to do</h4>
+    <p>
+      I hope to graduate and become a programmer in the field, I also have a future plan of starting a company of my own
+      based on an aplication I want to
+      create. I also hope to become an android developer at the end of my course. I am also planning to improve gamers
+      experience by creating more
+      interactive games.
+    </p>
+    <h4>Interests</h4>
+    <p>My hobbies, skills and interests include;</p>
+    <ul>
+      <li>Computer games</li>
+      <li>Java script</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Swimming</li>
+    </ul>
   </div>
-  <div id="projects">  
-  <h3>Projects</h3>
-  <p>
-    Below are the projects I have done;
-  </p>
-  <img class="project1" src="images/project1.png" alt="My first project">
-  <imgcaption>
-    This is the first project I did and the project used two technologies ie; HTML and CSS, The projects is about a
-    website for African Film
-    and Drama Festivals <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
-  </imgcaption>
-  <img class="delani" src="images/project2.png" alt="Delani studio project">
-  <imgcaption>
-    This is forked version of someones project the project uses HTML, CSS and JavaScript <a
-      href="https://louis-crypto.github.io/delani_studio_site.github.io/">view project</a>
-  </imgcaption>
-  <img class="photographer" src="images/project3.png" alt="phoographer Portfolio project">
-  <imgcaption>
-    This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <a
-      href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
-  </imgcaption>
+  <div id="projects">
+    <h3>Projects</h3>
+    <p>
+      Below are the projects I have done;
+    </p>
+    <img class="project1" src="images/project1.png" alt="My first project">
+    <imgcaption>
+      This is the first project I did and the project used two technologies ie; HTML and CSS, The projects is about a
+      website for African Film
+      and Drama Festivals <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
+    </imgcaption>
+    <img class="delani" src="images/project2.png" alt="Delani studio project">
+    <imgcaption>
+      This is forked version of someones project the project uses HTML, CSS and JavaScript <a
+        href="https://louis-crypto.github.io/delani_studio_site.github.io/">view project</a>
+    </imgcaption>
+    <img class="photographer" src="images/project3.png" alt="phoographer Portfolio project">
+    <imgcaption>
+      This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <a
+        href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
+    </imgcaption>
   </div>
   <footer>
     <h4>Contacts</h4>
