add color to h1 elements

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
   <h1>Portfolio</h1>
   <div id="home">
-    <h2>
-      <span class="l">l</span><span class="o">o</span><span class="u">u</span><span class="i">i</span><span class="s">s</span>
+    <div>
+    <h2 class="title">
+      <span class="l">L</span><span class="o">o</span><span class="u">u</span><span class="i">i</span><span class="s">s</span>
     </h2>
-    <p>Louis Odhiambo</p>
+    <p class="name">Louis Odhiambo</p>
+  </div>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
