--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Portfolio</h1>
   <div id="home">
-    <div>
+    <div class="intro">
     <h2 class="title">
       <span class="l">L</span><span class="o">o</span><span class="u">u</span><span class="i">i</span><span class="s">s</span>
     </h2>
