add an image of camping

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <li><a href="#">Contacts</a></li>
       </ul>
     </nav>
+    <p>About 11 repositories in (0.095 years)</p>
     <img src="images/miih.JPG" alt="an image of me">
+    <img src="images/camp.jpg" alt="camping">
     <h1>HELLO</h1>
     <p>I am Louis Odhiambo, I am a software developer</p>
   </div>
@@ -62,7 +64,7 @@
       <li>Java script</li>
       <li>HTML</li>
       <li>CSS</li>
-      <li>Swimming</li>
+      <li>Camping</li>
     </ul>
   </div>
   <div id="projects">
