--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Louis Odhiambo</title>
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
   <h1>Portfolio</h1>
-  <div id="home">
-    <div class="intro">
+  <div class="intro">
     <h2 class="title">
       <span class="l">L</span><span class="o">o</span><span class="u">u</span><span class="i">i</span><span class="s">s</span>
     </h2>
     <p class="name">Louis Odhiambo</p>
   </div>
+  <div class="container">
+  <div id="home">
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
@@ -27,15 +29,16 @@
       </ul>
     </nav>
     <p>About 11 repositories in (0.095 years)</p>
-    <img src="images/miih.JPG" alt="an image of me">
-    <img src="images/camp.jpg" alt="camping">
-    <h1>HELLO</h1>
-    <p>I am Louis Odhiambo, I am a software developer</p>
+    <div class="img">
+    <h4>Images</h4>
+    <img src="images/html.jpeg" alt="html and css" height="120px" width="200px">
+    <img src="images/miih.JPG" alt="an image of me" height="120px" width="200px">
+    <img src="images/camp.jpg" alt="camping" height="120px" width="200px">
+    <img src="images/games.jpeg" alt="computer games" height="120px" width="200px">
+  </div>
   </div>
   <div id="about">
-    <h1>About me</h1>
-    <h3>Background</h3>
-    <h4>Academic</h4>
+    <h4>Academic Background and other certificates</h4>
     <ul>
       <li>Certificate in software development</li>
       <li>Degree in Information science</li>
@@ -68,7 +71,7 @@
     </ul>
   </div>
   <div id="projects">
-    <h3>Projects</h3>
+    <h4>Projects</h4>
     <p>
       Below are the projects I have done;
     </p>
@@ -89,6 +92,7 @@
         href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
     </imgcaption>
   </div>
+</div>
   <footer>
     <h4>Contacts</h4>
     <ul>
