--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </nav>
     <p>About 11 repositories in (0.095 years)</p>
     <div class="img">
-    <h4>Images</h4>
+    <p class="h4">Images</p>
+    <P class="green">images of Louis, interests and skills</P>
     <img src="images/html.jpeg" alt="html and css" height="120px" width="200px">
     <img src="images/miih.JPG" alt="an image of me" height="120px" width="200px">
     <img src="images/camp.jpg" alt="camping" height="120px" width="200px">
@@ -38,13 +39,15 @@
   </div>
   </div>
   <div id="about">
-    <h4>Academic Background and other certificates</h4>
+    <p class="h4">Academic Background and other certificates</p>
+    <p class="green">all certifications and achievements</p>
     <ul>
       <li>Certificate in software development</li>
       <li>Degree in Information science</li>
       <li>Best training certificate</li>
     </ul>
-    <h4>What am doing currently</h4>
+    <p class="h4">What am doing currently</p>
+    <p class="green">What am doing and why I chose programming</p>
     <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life
       because it helps me improve my
       coding skils. I took progamming because I love games and the interraction between games, computers and people, and
@@ -52,7 +55,8 @@
       would love to create a
       game with the skills I gain from programming. My passion in proramming developed from gaming.
     </p>
-    <h4>What I hope to do</h4>
+    <p class="h4">What I hope to do</p>
+    <p class="green">my future plans and aspirations</p>
     <p>
       I hope to graduate and become a programmer in the field, I also have a future plan of starting a company of my own
       based on an aplication I want to
@@ -60,7 +64,8 @@
       experience by creating more
       interactive games.
     </p>
-    <h4>Interests</h4>
+    <h4 class="h4">Interests</h4>
+    <p class="green">my inetrest hobies and skills</p>
     <p>My hobbies, skills and interests include;</p>
     <ul>
       <li>Computer games</li>
@@ -71,8 +76,8 @@
     </ul>
   </div>
   <div id="projects">
-    <h4>Projects</h4>
-    <p>
+    <p class="h4">Projects</p>
+    <p class="green">
       Below are the projects I have done;
     </p>
     <img class="project1" src="images/project1.png" alt="My first project">
