--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <p class="h4">What am doing currently</p>
     <p class="green">What am doing and why I chose programming</p>
     <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life
-      because it helps me improve my
-      coding skils. I took progamming because I love games and the interraction between games, computers and people, and
+      because it helps <br> me improve my
+      coding skils. I took progamming because I love games and the interraction between games, computers and people, <br> and
       I
       would love to create a
       game with the skills I gain from programming. My passion in proramming developed from gaming.
@@ -59,12 +59,12 @@
     <p class="green">my future plans and aspirations</p>
     <p>
       I hope to graduate and become a programmer in the field, I also have a future plan of starting a company of my own
-      based on an aplication I want to
+      based on an aplication <br> I want to
       create. I also hope to become an android developer at the end of my course. I am also planning to improve gamers
-      experience by creating more
+      experience by <br> creating more
       interactive games.
     </p>
-    <h4 class="h4">Interests</h4>
+    <p class="h4">Interests</p>
     <p class="green">my inetrest hobies and skills</p>
     <p>My hobbies, skills and interests include;</p>
     <ul>
@@ -80,24 +80,31 @@
     <p class="green">
       Below are the projects I have done;
     </p>
+    <div class="gallery">
+    <div>
     <img class="project1" src="images/project1.png" alt="My first project">
     <imgcaption>
       This is the first project I did and the project used two technologies ie; HTML and CSS, The projects is about a
       website for African Film
-      and Drama Festivals <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
+      and Drama Festivals <br> <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
     </imgcaption>
+    </div>
+    <div>
     <img class="delani" src="images/project2.png" alt="Delani studio project">
     <imgcaption>
-      This is forked version of someones project the project uses HTML, CSS and JavaScript <a
+      This is forked version of someones project the project uses HTML, CSS and JavaScript <br> <a
         href="https://louis-crypto.github.io/delani_studio_site.github.io/">view project</a>
     </imgcaption>
+    </div>
+    <div>
     <img class="photographer" src="images/project3.png" alt="phoographer Portfolio project">
     <imgcaption>
-      This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <a
+      This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <br> <a
         href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
     </imgcaption>
+    </div>
   </div>
-</div>
+  </div>
   <footer>
     <h4>Contacts</h4>
     <ul>
@@ -107,6 +114,7 @@
       <li>Instagram: @african_boy</li>
     </ul>
   </footer>
+</div>
 </body>
 
 </html>
