change color of h1 elements

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
   <footer>
     <h4>Contacts</h4>
     <ul>
-      <li>odhiambolouis745@gmail.com</li>
+      <li><a>odhiambolouis745@gmail.com</a></li>
       <li>+254 741 534 863</li>
-      <li>linkedin: @LouisOdhiambo</li>
-      <li>Instagram: @african_boy</li>
+      <li>linkedin:@ <a>LouisOdhiambo</a></li>
+      <li>Instagram:@ <a>african_boy</a></li>
     </ul>
   </footer>
 </div>
