style links to projects

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <h2 class="title">
       <span class="l">L</span><span class="o">o</span><span class="u">u</span><span class="i">i</span><span class="s">s</span>
     </h2>
-    <p class="name">Louis Odhiambo</p>
+    <form class="name" action="action_page.php">
+      <input type="text" placeholder="Louis Odhiambo" name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+    <!--<p class="name">Louis Odhiambo</p>-->
   </div>
   <div class="container">
   <div id="home">
