add a greetings section to the webpage

--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
       </ul>
     </nav>
     <p>About 11 repositories in (0.095 years)</p>
+    <div class="greetings">
+      <p class="p1">HELLO</p>
+      <P class="p2">Welcome to my page, <br> I am Louis Odhiambo <br> am a software developer</P>
+    </div>
     <div class="img">
     <p class="h4">Images</p>
     <P class="green">images of Louis, interests and skills</P>
-    <img src="images/html.jpeg" alt="html and css" height="120px" width="200px">
-    <img src="images/miih.JPG" alt="an image of me" height="120px" width="200px">
-    <img src="images/camp.jpg" alt="camping" height="120px" width="200px">
-    <img src="images/games.jpeg" alt="computer games" height="120px" width="200px">
+    <img src="images/miih.JPG" alt="an image of me" height="160px" width="200px">
+    <img src="images/html.jpeg" alt="html and css" height="160px" width="200px">
+    <img src="images/camp.jpg" alt="camping" height="160px" width="200px">
+    <img src="images/games.jpeg" alt="computer games" height="160px" width="200px">
   </div>
   </div>
   <div id="about">
