add float properties to the greetings section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <div id="home">
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contacts</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#footer">Contacts</a></li>
       </ul>
     </nav>
     <p>About 11 repositories in (0.095 years)</p>
@@ -47,7 +47,7 @@
   </div>
   </div>
   <div id="about">
-    <p class="h4">Academic Background and other certificates</p>
+    <p class="h4">ABOUT ME | Academic Background and other certificates</p>
     <p class="green">all certifications and achievements</p>
     <ul>
       <li>Certificate in software development</li>
@@ -113,7 +113,7 @@
     </div>
   </div>
   </div>
-  <footer>
+  <footer id="footer">
     <h4>Contacts</h4>
     <ul>
       <li><a>odhiambolouis745@gmail.com</a></li>
