--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </nav>
     <p>About 11 repositories in (0.095 years)</p>
     <div class="greetings">
-    <p class="p1">
-      HELLO <span class="p2">Welcome to my page, <br> I am Louis Odhiambo <br> am a software developer</span>
+    <p>
+      <span class="p1">HELLO</span> <span class="p2">Welcome to my page, <br> I am Louis Odhiambo <br> am a software developer</span>
     </p>
     <div class="p3">
       <img src="images/miih.JPG" alt="an image of me">
@@ -48,10 +48,12 @@
     <div>
     <img src="images/miih.JPG" alt="an image of me" height="160px" width="200px">
     <img src="images/html.jpeg" alt="html and css" height="160px" width="200px">
+    <img src="images/campsite.jpeg" alt="campsite" height="160px" width="200px">
   </div>
   <div>
     <img src="images/camp.jpg" alt="camping" height="160px" width="200px">
     <img src="images/games.jpeg" alt="computer games" height="160px" width="200px">
+    <img src="images/code.jpeg" alt="coding love" height="160px" width="200px">
   </div>
   </div>
   </div>
