--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
   <footer id="footer">
     <h4>Contacts</h4>
     <ul>
-      <li><a>odhiambolouis745@gmail.com</a></li>
+      <li><a href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin&cid=1&navigationDirection=forward"><span class="follow">odhiambolouis745@gmail.com</span></a></li>
       <li>+254 741 534 863</li>
-      <li>linkedin:@ <a>LouisOdhiambo</a></li>
-      <li>Instagram:@ <a>african_boy</a></li>
+      <li>linkedin:@ <a href="https://ke.linkedin.com/"><span class="follow">LouisOdhiambo</span></a></li>
+      <li>Instagram:@ <a href="https://www.instagram.com/_african_boy_/?hl=en"><span class="follow">_african_boy</span></a></li>
     </ul>
   </footer>
 </div>
