styled heading, moved greetings div left

--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 </head>
 
 <body>
-  <h1>Portfolio</h1>
+  <h1 class="port">my Portfolio</h1>
   <div class="intro">
     <h2 class="title">
       <span class="l">L</span><span class="o">o</span><span class="u">u</span><span class="i">i</span><span class="s">s</span>
     </h2>
-    <form class="name" action="action_page.php">
-      <input type="text" placeholder="Louis Odhiambo" name="search">
-      <button type="submit"><i class="fa fa-search"></i></button>
-    </form>
-    <!--<p class="name">Louis Odhiambo</p>-->
+    <p class="name">Louis Odhiambo</p>
   </div>
   <div class="container">
   <div id="home">
@@ -35,7 +31,10 @@
     <p>About 11 repositories in (0.095 years)</p>
     <div class="greetings">
     <p>
-      <span class="p1">HELLO</span> <span class="p2">Welcome to my page, <br> I am Louis Odhiambo <br> am a software developer</span>
+      <span class="p1">
+        <span class="h">H</span><span class="e">E</span><span class="x">L</span><span class="y">L</span><span class="z">O</span>
+      </span> 
+        <span class="p2">Welcome to my page, <br> I am Louis Odhiambo <br> am a software developer</span>
     </p>
     <div class="p3">
       <img src="images/miih.JPG" alt="an image of me">
