change project description

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <div>
     <img class="project1" src="images/project1.png" alt="My first project">
     <imgcaption>
-      This is the first project I did and the project used two technologies ie; HTML and CSS, The projects is about a
+      This my first project, the project used two technologies ie; HTML and CSS, The projects is about a
       website for African Film
       and Drama Festivals <br> <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
     </imgcaption>
