add description to all sections of the read me

--- a/index.html
+++ b/index.html
@@ -14,125 +14,134 @@
   <h1 class="port">my Portfolio</h1>
   <div class="intro">
     <h2 class="title">
-      <span class="l">L</span><span class="o">o</span><span class="u">u</span><span class="i">i</span><span class="s">s</span>
+      <span class="l">L</span><span class="o">o</span><span class="u">u</span><span class="i">i</span><span
+        class="s">s</span>
     </h2>
     <p class="name">Louis Odhiambo</p>
   </div>
   <div class="container">
-  <div id="home">
-    <nav>
+    <div id="home">
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#footer">Contacts</a></li>
+        </ul>
+      </nav>
+      <p>About 11 repositories in (0.095 years)</p>
+      <div class="greetings">
+        <p>
+          <span class="p1">
+            <span class="h">H</span><span class="e">E</span><span class="x">L</span><span class="y">L</span><span
+              class="z">O</span>
+          </span>
+          <span class="p2">Welcome to my page, <br> I am Louis Odhiambo <br> am a software developer</span>
+        </p>
+        <div class="p3">
+          <img src="images/miih.JPG" alt="an image of me">
+        </div>
+      </div>
+      <div class="img">
+        <p class="h4">Images</p>
+        <P class="green">images of Louis, interests and skills</P>
+        <div class="grid">
+          <div>
+            <img src="images/miih.JPG" alt="an image of me" height="160px" width="200px">
+            <img src="images/html.jpeg" alt="html and css" height="160px" width="200px">
+            <img src="images/campsite.jpeg" alt="campsite" height="160px" width="200px">
+          </div>
+          <div>
+            <img src="images/camp.jpg" alt="camping" height="160px" width="200px">
+            <img src="images/games.jpeg" alt="computer games" height="160px" width="200px">
+            <img src="images/code.jpeg" alt="coding love" height="160px" width="200px">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="about">
+      <p class="h4">ABOUT ME | Academic Background and other certificates</p>
+      <p class="green">all certifications and achievements</p>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#footer">Contacts</a></li>
+        <li>Certificate in software development</li>
+        <li>Degree in Information science</li>
+        <li>Best training certificate</li>
       </ul>
-    </nav>
-    <p>About 11 repositories in (0.095 years)</p>
-    <div class="greetings">
-    <p>
-      <span class="p1">
-        <span class="h">H</span><span class="e">E</span><span class="x">L</span><span class="y">L</span><span class="z">O</span>
-      </span> 
-        <span class="p2">Welcome to my page, <br> I am Louis Odhiambo <br> am a software developer</span>
-    </p>
-    <div class="p3">
-      <img src="images/miih.JPG" alt="an image of me">
+      <p class="h4">What am doing currently</p>
+      <p class="green">What am doing and why I chose programming</p>
+      <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my
+        life
+        because it helps <br> me improve my
+        coding skils. I took progamming because I love games and the interraction between games, computers and people,
+        <br> and
+        I
+        would love to create a
+        game with the skills I gain from programming. My passion in proramming developed from gaming.
+      </p>
+      <p class="h4">What I hope to do</p>
+      <p class="green">my future plans and aspirations</p>
+      <p>
+        I hope to graduate and become a programmer in the field, I also have a future plan of starting a company of my
+        own
+        based on an aplication <br> I want to
+        create. I also hope to become an android developer at the end of my course. I am also planning to improve gamers
+        experience by <br> creating more
+        interactive games.
+      </p>
+      <p class="h4">Interests</p>
+      <p class="green">my inetrest hobies and skills</p>
+      <p>My hobbies, skills and interests include;</p>
+      <ul>
+        <li>Computer games</li>
+        <li>Java script</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Camping</li>
+      </ul>
     </div>
+    <div id="projects">
+      <p class="h4">Projects</p>
+      <p class="green">
+        Below are the projects I have done;
+      </p>
+      <div class="gallery">
+        <div>
+          <img class="project1" src="images/project1.png" alt="My first project">
+          <imgcaption>
+            This my first project, the project used two technologies ie; HTML and CSS, The projects is about a
+            website for African Film
+            and Drama Festivals <br> <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
+          </imgcaption>
+        </div>
+        <div>
+          <img class="delani" src="images/project2.png" alt="Delani studio project">
+          <imgcaption>
+            This is forked version of someones project the project uses HTML, CSS and JavaScript <br> <a
+              href="https://louis-crypto.github.io/delani_studio_site.github.io/">view project</a>
+          </imgcaption>
+        </div>
+        <div>
+          <img class="photographer" src="images/project3.png" alt="phoographer Portfolio project">
+          <imgcaption>
+            This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <br> <a
+              href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
+          </imgcaption>
+        </div>
+      </div>
     </div>
-    <div class="img">
-    <p class="h4">Images</p>
-    <P class="green">images of Louis, interests and skills</P>
-  <div class="grid">
-    <div>
-    <img src="images/miih.JPG" alt="an image of me" height="160px" width="200px">
-    <img src="images/html.jpeg" alt="html and css" height="160px" width="200px">
-    <img src="images/campsite.jpeg" alt="campsite" height="160px" width="200px">
+    <footer id="footer">
+      <h4>Contacts</h4>
+      <ul>
+        <li><a
+            href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin&cid=1&navigationDirection=forward"><span
+              class="follow">odhiambolouis745@gmail.com</span></a></li>
+        <li>+254 741 534 863</li>
+        <li>linkedin:@ <a href="https://ke.linkedin.com/"><span class="follow">LouisOdhiambo</span></a></li>
+        <li>Instagram:@ <a href="https://www.instagram.com/_african_boy_/?hl=en"><span
+              class="follow">_african_boy</span></a></li>
+      </ul>
+    </footer>
   </div>
-  <div>
-    <img src="images/camp.jpg" alt="camping" height="160px" width="200px">
-    <img src="images/games.jpeg" alt="computer games" height="160px" width="200px">
-    <img src="images/code.jpeg" alt="coding love" height="160px" width="200px">
-  </div>
-  </div>
-  </div>
-  </div>
-  <div id="about">
-    <p class="h4">ABOUT ME | Academic Background and other certificates</p>
-    <p class="green">all certifications and achievements</p>
-    <ul>
-      <li>Certificate in software development</li>
-      <li>Degree in Information science</li>
-      <li>Best training certificate</li>
-    </ul>
-    <p class="h4">What am doing currently</p>
-    <p class="green">What am doing and why I chose programming</p>
-    <p>I am currently a student at Moringa School taking programming as a course. This is a great opportunity in my life
-      because it helps <br> me improve my
-      coding skils. I took progamming because I love games and the interraction between games, computers and people, <br> and
-      I
-      would love to create a
-      game with the skills I gain from programming. My passion in proramming developed from gaming.
-    </p>
-    <p class="h4">What I hope to do</p>
-    <p class="green">my future plans and aspirations</p>
-    <p>
-      I hope to graduate and become a programmer in the field, I also have a future plan of starting a company of my own
-      based on an aplication <br> I want to
-      create. I also hope to become an android developer at the end of my course. I am also planning to improve gamers
-      experience by <br> creating more
-      interactive games.
-    </p>
-    <p class="h4">Interests</p>
-    <p class="green">my inetrest hobies and skills</p>
-    <p>My hobbies, skills and interests include;</p>
-    <ul>
-      <li>Computer games</li>
-      <li>Java script</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Camping</li>
-    </ul>
-  </div>
-  <div id="projects">
-    <p class="h4">Projects</p>
-    <p class="green">
-      Below are the projects I have done;
-    </p>
-    <div class="gallery">
-    <div>
-    <img class="project1" src="images/project1.png" alt="My first project">
-    <imgcaption>
-      This my first project, the project used two technologies ie; HTML and CSS, The projects is about a
-      website for African Film
-      and Drama Festivals <br> <a href="https://louis-crypto.github.io/Louis.github.io/">View project</a>
-    </imgcaption>
-    </div>
-    <div>
-    <img class="delani" src="images/project2.png" alt="Delani studio project">
-    <imgcaption>
-      This is forked version of someones project the project uses HTML, CSS and JavaScript <br> <a
-        href="https://louis-crypto.github.io/delani_studio_site.github.io/">view project</a>
-    </imgcaption>
-    </div>
-    <div>
-    <img class="photographer" src="images/project3.png" alt="phoographer Portfolio project">
-    <imgcaption>
-      This is a project on a portfolio for a photographer, This project uses HTML and CSS technologies <br> <a
-        href="https://louis-crypto.github.io/photographer-portfolio.github.io/">view project</a>
-    </imgcaption>
-    </div>
-  </div>
-  </div>
-  <footer id="footer">
-    <h4>Contacts</h4>
-    <ul>
-      <li><a href="https://accounts.google.com/signin/v2/identifier?flowName=GlifWebSignIn&flowEntry=ServiceLogin&cid=1&navigationDirection=forward"><span class="follow">odhiambolouis745@gmail.com</span></a></li>
-      <li>+254 741 534 863</li>
-      <li>linkedin:@ <a href="https://ke.linkedin.com/"><span class="follow">LouisOdhiambo</span></a></li>
-      <li>Instagram:@ <a href="https://www.instagram.com/_african_boy_/?hl=en"><span class="follow">_african_boy</span></a></li>
-    </ul>
-  </footer>
-</div>
 </body>
+
 </html>
